Updated source files to WET 3.05

--- a/Themes/GCWU/MasterPages/MasterPages.csproj
+++ b/Themes/GCWU/MasterPages/MasterPages.csproj
@@ -147,6 +147,7 @@
     <None Include="Layouts\SharePointProjectItem.spdata">
       <SharePointProjectItemId>{7b2403cd-f9e5-4312-b8f7-362214cffc07}</SharePointProjectItemId>
     </None>
+    <None Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\dependencies\images\Sorting icons.psd" />
     <None Include="Lists\WETFooterNavigation\SharePointProjectItem.spdata">
       <SharePointProjectItemId>{a6b4678f-fc96-4957-bd54-95f89b20c0f8}</SharePointProjectItemId>
     </None>
@@ -269,15 +270,33 @@
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\dependencies\calendar-min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\dependencies\charts-min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\dependencies\colorbox-min.js" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\dependencies\css\datatables-min.css" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\dependencies\datatables-min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\dependencies\easytabs-min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\dependencies\equalheights-min.js" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\dependencies\excanvas-min.js" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\dependencies\flot-min.js" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\dependencies\flotPie-min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\dependencies\hashchange-min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\dependencies\hoverintent-min.js" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\dependencies\images\back_disabled.png" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\dependencies\images\back_enabled.png" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\dependencies\images\back_enabled_hover.png" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\dependencies\images\favicon.ico" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\dependencies\images\forward_disabled.png" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\dependencies\images\forward_enabled.png" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\dependencies\images\forward_enabled_hover.png" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\dependencies\images\sort_asc.png" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\dependencies\images\sort_asc_disabled.png" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\dependencies\images\sort_both.png" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\dependencies\images\sort_desc.png" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\dependencies\images\sort_desc_disabled.png" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\dependencies\json-min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\dependencies\matchMedia-min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\dependencies\metadata-min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\dependencies\outside-min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\dependencies\parserTable-min.js" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\dependencies\picturefill-min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\dependencies\pie-min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\dependencies\prettify-min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\dependencies\prettify\lang-apollo-min.js" />
@@ -303,10 +322,15 @@
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\dependencies\validate-min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\dependencies\validateAdditional-min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\dependencies\xregexp-min.js" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\i18n\ar-min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\i18n\base-min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\i18n\bg-min.js" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\i18n\cs-min.js" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\i18n\de-min.js" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\i18n\el-min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\i18n\en-min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\i18n\es-min.js" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\i18n\et-min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\i18n\formvalid\messages_ar-min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\i18n\formvalid\messages_bg-min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\i18n\formvalid\messages_ca-min.js" />
@@ -352,8 +376,26 @@
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\i18n\formvalid\methods_nl-min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\i18n\formvalid\methods_pt-min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\i18n\fr-min.js" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\i18n\hu-min.js" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\i18n\id-min.js" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\i18n\is-min.js" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\i18n\it-min.js" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\i18n\ja-min.js" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\i18n\ko-min.js" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\i18n\lt-min.js" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\i18n\lv-min.js" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\i18n\nl-min.js" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\i18n\pl-min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\i18n\pt-BR-min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\i18n\pt-min.js" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\i18n\ru-min.js" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\i18n\sk-min.js" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\i18n\th-min.js" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\i18n\tr-min.js" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\i18n\uk-min.js" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\i18n\vi-min.js" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\i18n\zh-Hans-min.js" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\i18n\zh-min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\images\archived\warning.gif" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\images\calendar\n.png" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\images\calendar\p.png" />
@@ -397,26 +439,38 @@
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\images\tabs\prev.gif" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\images\webfeeds\ajax-loader.gif" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\images\webfeeds\gradient.png" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\jquery-ie.min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\jquery.min.js" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\jquerymobile\jquery.mobile-ie.min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\jquerymobile\jquery.mobile.min.js" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\pe-ap-ie-min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\pe-ap-min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\polyfills\datalist-min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\polyfills\datepicker-min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\polyfills\detailssummary-min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\polyfills\html5shiv-min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\polyfills\localstorage-min.js" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\polyfills\meter-min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\polyfills\progress-min.js" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\polyfills\sessionstorage-min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\polyfills\slider-min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\js\settings.js" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\css\images\ajax-loader.gif" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\css\images\icons-18-black.png" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\css\images\icons-18-white.png" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\css\images\icons-36-black.png" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\css\images\icons-36-white.png" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\css\jquery.mobile-min.css" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\css\theme-ie-min.css" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\css\theme-min.css" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\css\theme-ns-ie-min.css" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\css\theme-ns-min.css" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\css\theme-serv-ie-min.css" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\css\theme-serv-min.css" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\css\theme-sp-pe-ie-min.css" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\css\theme-sp-pe-min.css" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\images\bcrumb-mobile.png" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\images\bcrumb-rtl.gif" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\images\bcrumb.gif" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\images\bg-minister-bottom.gif" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\images\bg-minister-top.gif" />
@@ -442,9 +496,15 @@
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\images\sft-deco-side.gif" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\images\sft-deco.gif" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\images\sig-eng-bg.gif" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\images\sig-eng-r.svg" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\images\sig-eng-w.gif" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\images\sig-eng.gif" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\images\sig-eng.svg" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\images\sig-fra-bg.gif" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\images\sig-fra-r.svg" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\images\sig-fra-w.gif" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\images\sig-fra.gif" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\images\sig-fra.svg" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\images\sl_feeds.png" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\images\sl_twitter.png" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\images\sl_youtube.png" />
@@ -454,7 +514,12 @@
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\images\sp-pe-button.gif" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\images\sp-pe-leaf.jpg" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\images\wmms-bg.gif" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\images\wmms-r.svg" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\images\wmms-w.gif" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\images\wmms-wm.gif" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\images\wmms.gif" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\images\wmms.svg" />
+    <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\js\theme-ie-min.js" />
     <Content Include="Layouts\WET.Theme.GCWU\WET-BOEW\theme-gcwu-fegc\js\theme-min.js" />
     <Content Include="Lists\WETFooterNavigation\Elements.xml" />
     <Content Include="Lists\WETFooterNavigation\Schema.xml" />
