Dynamic Language Toggle

--- a/Themes/Intranet - SharePoint 2013 - WET 4/MasterPages/Intranet Theme.csproj
+++ b/Themes/Intranet - SharePoint 2013 - WET 4/MasterPages/Intranet Theme.csproj
@@ -119,7 +119,7 @@
     <Compile Include="WebControls\LeftNavigation.cs" />
     <Compile Include="WebControls\SiteMap.cs" />
     <Compile Include="WebControls\HomeLink.cs" />
-    <Compile Include="WebControls\Language.cs" />
+    <Compile Include="WebControls\LanguageToggle.cs" />
     <Compile Include="WebControls\LastModifiedDate.cs" />
     <Compile Include="WebControls\PageMetadata.cs" />
     <Compile Include="WebControls\PageTitle.cs" />
